--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[british,titlepage]{ntnuthesis}
 
-\title{And NTNU Thesis \LaTeX{} Document Class}
+\title{An NTNU Thesis \LaTeX{} Document Class}
 \shorttitle{An NTNU Thesis Document Class}
 \author{Community of Practice in Computer Science Education at NTNU}
 \shortauthor{CoPCSE$@$NTNU}
