--- a/thesis.tex
+++ b/thesis.tex
@@ -1,20 +1,20 @@
 \documentclass[british,titlepage]{ntnuthesis}
 
-\title{An NTNU Thesis \LaTeX{} Document Class}
+\title{Andd NTNU Thesis \LaTeX{} Document Class}
 \shorttitle{An NTNU Thesis Document Class}
 \author{Community of Practice in Computer Science Education at NTNU}
 \shortauthor{CoPCSE$@$NTNU}
 \date{CC-BY \ntnuthesisdate}
 
 \addbibresource{thesis.bib}
-
+asdasd
 \input{glossary.tex} % add glossary and acronym lists before document
 
 \begin{document}
 
 \input{chapters/0a-abstract.tex}
 \input{chapters/0b-sammendrag.tex}
-
+k
 \tableofcontents
 \listoffigures
 \listoftables
