Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -9,7 +9,7 @@
 \addbibresource{thesis.bib}
 
 \input{glossary.tex} % add glossary and acronym lists before document
-
+Julian
 \begin{document}
 
 \input{chapters/0a-abstract.tex}
