--- a/thesis.tex
+++ b/thesis.tex
@@ -7,9 +7,9 @@
 \date{CC-BY \ntnuthesisdate}
 
 \addbibresource{thesis.bib}
+\usepackage{float} % added by Walid 
 
 \input{glossary.tex} % add glossary and acronym lists before document
-Julian
 \begin{document}
 
 \input{chapters/0a-abstract.tex}
