Updates from Overleaf

--- a/notes.tex
+++ b/notes.tex
@@ -1,37 +1,83 @@
+- Abstract (NO/ENG)
+- Contents
+- Figures
+- Tables
+- Code Listings
+- Acronyms (legg til i glossary.tex) HVORDAN VISE I F DOKUMENTET?!?
+- Acknowledgements
 
-1. Introduction 
- - Background: about Mobai
-
- - Goals
- - Scope: subject area, delimitation, task description
- - Why did we choose this task?
- - The team
-   - Who we are / the team members
-   - Academic backgrounds
-   - Roles
+1. Introduction (6-8)
+ - Background: about Mobai (1/2)
+ - Scope: subject area, delimitation, task description (1-2)
+ - target groups (1/4)
+    * users of the web application
+    * Thesis reader
+ - Why did we choose this task? (1)
+ - The team (1-2)
+   - Who we are / the team members (1/2)
+   - Academic backgrounds (1/2)
+   - Roles (1/2)
    - Decision making
- - Structure of the report
+ - Structure of the report (1)
  
-2. Theory
-  - what is a good image
-  - About Face quality metrics
+ 2. Specification (4-5)
+    - Choice of development method (2-3) Putte inn i intro?
+        - considered models (1)
+    - Risk analysis
+    
+    
+3. Face Quality Assessment (6-7)
+    - What is a good image (Quality) (2-3)
+    - About Face quality metrics (3)
+        - ISO (1)
+        - FaceQNet (1)
   
-  Assessment
-  - objective assessment: explain objective assessment, what does the algorithms output?, explain faceQnet, ISO_metrics
-  - Subjective assessment: explain subjective, how to setup survey, type of people (age, etc..), results, what could be done better
-  - explain experiment: explain correlation between subjective and objective
   
-  Development process
-  - Requirements
-  - Design
-  - Development methods
-  - Testing: unit testing, user testing
+4. Objective assessment (15-20)
+    - Application requirements (4-5)
+        * Use cases (3)
+        * Misuse cases (1-2)
+    - Why have we chosen web (react) + python (flask)? (1-2). docker(containerization) 
+    - explain frontend (react, material-ui) (1)
+    - explain backend (axios) (restAPI) (1)
+    - explain why we use containerization (docker) (1)
+    - Implementation (2)
+        * How they all work together
+    - Testing: unit testing, user testing (1-2)
+    - Results (1)
+    
+
+5. Subjective experiment (16-20)
+   - Conducting the survey  (6-7)
+        * Factors (1) 
+        * Our choice (1-2) 
+        * Corona disadvantages (1/2)
+        * Introduction manual (2) 
+        * Type of people/participants (1/2)
+        * What went wrong (1)
+    - Datasets (6-9)
+        * Combined passport alike (1)
+            - Cameras used
+        * Capture from photo ntnu dataset (1/2)
+        * Selfie dataset (1/2)
+        * Combining datasets (2)
+        * Creating our own dataset (3-4)
+            - Masker/ munnbind 
+            - Rotation 
+    - Results(3) 
+        * Overall (3/2)
+        * Mobai (1/2)
+        * Normal people (non-experts)(1/2)
+        * Correlation between Mobai and normal people(1)
+            - The tools
+ 
+6. Results (3)
+     - discuss correlation between subj/obj. assessment (3)
   
-  Results
-  - show front-end/back-end
-  - discuss correlation between subj/obj. assessment
-  - conclusion to experiment: can the two algorithms be used further? how are the objective similar to the subjective? same quality scores? 
+7. Conclusion (4)
+    - can the two algorithms be used further? (2)
+    - how are the objective similar to the subjective? same quality scores? (2)
   
  
- 2d score graph. x-axis objective scores, y-axis subjective scores. plot each images scores to see correlation.
+ 
  
