--- a/glossary.tex
+++ b/glossary.tex
@@ -30,6 +30,8 @@ typically printed as an appendix}
 % ----- Acronyms -----
 % --------------------
 
-\newacronym{phd}{PhD}{philosophiae doctor}
-\newacronym{CoPCSE}{CoPCSE@NTNU}{Community of Practice in Computer ScienceEducation at NTNU}
-\newacronym{gcd}{GCD}{Greatest Common Divisor}
+\newacronym{fiqm}{FIQM}{Face Image Quality Metric}
+\newacronym{fiqa}{FIQA}{Face Image Quality Assessment}
+\newacronym{gdpr}{GDPR}{General Data Protection Regulation}
+\newacronym{ux}{UX}{User Experience}
+\newacronym{ui}{UI}{User Interface}
