Updates from Overleaf

--- a/notes.tex
+++ b/notes.tex
@@ -63,7 +63,7 @@
         * Combining datasets (2)
         * Creating our own dataset (3-4)
             - Masker/ munnbind 
-            - Rotation 
+            - Tilting 
     - Results(3) 
         * Overall (3/2)
         * Mobai (1/2)
