--- a/thesis.bib
+++ b/thesis.bib
@@ -19,3 +19,65 @@
   year={1951}
 }
 
+@misc{GroupDecisionMaking,
+    author={Tim Barnett},
+    title={GROUP DECISION MAKING [Internet]},
+    howpublished={Avdameg Inc [cited 20.04.2021]},
+    note={Available from: \url{https://www.referenceforbusiness.com/management/Gr-Int/Group-Decision-Making.html}}
+}
+
+@book{WaterfallMethod,
+    author={Ian Sommerville},
+    title={Software Engineering 10th edition},
+    publisher={Pearson},
+    pages={47--49},
+    year={2016}
+}
+
+@misc{KanbanVScrum,
+    author = {Rachaelle Lynn},
+    title = {Kanban vs. Scrum: What are the Differences? [Internett]},
+    howpublished = {Planview; 2021 [cited 21.01.2021]},
+    note = {Available from: \url{https://www.planview.com/no/resources/guide/introduction-to-kanban/kanban-vs-scrum/}}
+}
+
+@misc{Trello,
+    title = {Trello},
+    howpublished = {\raggedright\url{https://trello.com/}},
+}
+
+@misc{eXtremeP,
+    author = {Agile Alliance},
+    title = {Extreme Programming [Internet]},
+    howpublished = {Agile Alliance; 2016 [cited 21.01.2021]},
+    note = {Available from: \url{https://www.agilealliance.org/glossary/xp/}}
+}
+
+@misc{DoneDone,
+    author = {The Scrum Patterns Group},
+    title = {Definition of done [Internet]},
+    howpublished = {Raleigh: The Scrum Patterns Group; 2019 [cited 25.01.2021]},
+    note = {Available from: \url{http://scrumbook.org/}}
+}
+
+@book{RiskAnalysis,
+    author={Ian Sommerville},
+    title={Software Engineering 10th edition},
+    publisher={Pearson},
+    pages={648--650},
+    year={2016}
+}
+
+@misc{DjangoAdvantages,
+    title={Top 10 backend frameworks},
+    howpublished={Back4App [cited 21.04.2021]},
+    note={Available from: \url{https://blog.back4app.com/backend-frameworks/}}
+}
+
+@misc{DjangoDisadvantages,
+    author={Shardul Bhatt},
+    title={Pros and Cons of Django Framework for App Development},
+    howpublished={DZone; 31.08.2020 [cited 22.04.2021]},
+    note={Available from: \url{https://dzone.com/articles/pros-and-cons-of-django-framework-for-app-developm} }
+}
+
