--- a/thesis.tex
+++ b/thesis.tex
@@ -40,6 +40,9 @@
 \input{chapters/papers.tex}
 
 \appendix
-\input{appendices/a-appendix.tex}
+\input{appendices/a-projectPlan/projectPlan}
+\input{appendices/b-taskDescription/taskDescription}
+\input{appendices/c-agreements/agreements}
+\input{appendices/d-results/results}
 
 \end{document}
