Updates from Overleaf

--- a/appendices/c-agreements/agreements.tex
+++ b/appendices/c-agreements/agreements.tex
@@ -1,5 +1,6 @@
 \chapter{Project agreements}
 
+\cleardoublepage
 \includepdf[pages=-]{appendices/c-agreements/NTNUAgreement}
-
+\cleardoublepage
 \includepdf[pages=-]{appendices/c-agreements/MobaiAgreement}
