Updates from Overleaf

--- a/thesis.bib
+++ b/thesis.bib
@@ -36,7 +36,7 @@
 
 @misc{KanbanVScrum,
     author = {Rachaelle Lynn},
-    title = {Kanban vs. Scrum: What are the Differences? [Internett]},
+    title = {Kanban vs. Scrum: What are the Differences? [Internet]},
     howpublished = {Planview; 2021 [cited 21.01.2021]},
     note = {Available from: \url{https://www.planview.com/no/resources/guide/introduction-to-kanban/kanban-vs-scrum/}}
 }
@@ -81,3 +81,104 @@
     note={Available from: \url{https://dzone.com/articles/pros-and-cons-of-django-framework-for-app-developm} }
 }
 
+@misc{Containerization,
+    author={Eshan Sarpotdar},
+    title={Why Should You Containerize Applications? [Internet]},
+    howpublished={CloudHedge; 09.08.2019 [cited 23.04.2021]},
+    note={Available from: \url{https://cloudhedge.io/why-should-you-containerize-applications/}}
+}
+
+@misc{SmallTeams,
+    author={Anjuan Simmons},
+    title={Why Small is the Key to Big Agile Results[Internet]},
+    howpublished={assemble; 13.06.2016 [cited 24.04.2021]},
+    note={Available from: \url{https://assemblesystems.com/blog/why-small-is-the-key-to-big-agile-results/}}
+}
+
+@misc{RandomForestRegressor,
+    title={Random Forest Regressor [Internet]},
+    howpublished={scikit-learn [cited 27.04.2021]},
+    note = {Available from: \url{https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html/}}
+}
+    
+@misc{FaceQnet,
+    title={FaceQnet [Internet]},
+    howpublished={Github [cited 27.04.2021]},
+    note = {Available from: \url{https://github.com/uam-biometrics/FaceQnet/}}
+}
+
+@manual{ICAO1,
+    title={Machine Readable Travel Documents [Internet]},
+    organization={ICAO [cited 27.04.2021]},
+    edition={Seventh edition},
+    year={2015},
+    note={Available from: \url{https://www.icao.int/publications/Documents/9303_p3_cons_en.pdf}} 
+}
+
+@manual{ICAO2,
+    title={Portrait Quality (Reference Facial Images for MRTD) [Internet]},
+    organization={ICAO [cited 27.04.2021]},
+    edition={Version 1.0},
+    year={2018},
+    month={April},
+    note={Available from: \url{https://www.icao.int/Security/FAL/TRIP/Documents/TR\%20-\%20Portrait\%20Quality\%20v1.0.pdf}}
+}
+
+@misc{ISO50912,
+    title={ISO/IEC TR 29794-5:2010 - Information technology — Biometric sample quality — Part 5: Face image data},
+    organization={ISO [cited 27.04.2021]},
+    edition={First edition},
+    year={2010},
+    month={April},
+    note={Available from: \url{https://www.iso.org/standard/50912.html}}
+}
+
+% Authors funker faen ikke
+@misc{VGGFace2,
+    author={Cao Q and Shen L and Xie W and Parkhi OM and Zisserman A},
+    title={VGGFace2: A dataset for recognising faces across pose and age},
+    howpublished={Cornell University [cited 27.04.2021]},
+    edition={version 2},
+    year={2018},
+    month={May},
+    note={Available from: \url{https://arxiv.org/abs/1710.08092}}
+}
+
+@misc{FaceImageQualityAssessment,
+    author={Schlett T and Rathgeb C and Henniger O and Galbally J and Fierrez J and Busch C},
+    title={Face Image Quality Assessment: A Literature Survey},
+    howpublished={Cornell University [cited 27.04.2021]},
+    edition={version 1},
+    year={2020},
+    month={September},
+    note={Available from: \url{https://arxiv.org/abs/2009.01103}}
+}
+
+@misc{kanban,
+    author = {Max Rehkopf},
+    title = {Kanban vs. scrum: which agile are you? [Internet]},
+    howpublished = {Atlassian; 2021 [cited 27.04.2021]},
+    note = {Available from: \url{https://www.atlassian.com/agile/kanban/kanban-vs-scrum}}
+}
+
+@misc{ScrumDefinition,
+    title={What is Scrum? [Internet]},
+    howpublished={digite [cited 27.04.2021]},
+    note={Available from: \url{https://www.digite.com/agile/scrum-methodology/}}
+}
+
+@manual{methodologySubjective,
+    title={Recommendation ITU-R BT.500-13: Methodology for the subjective
+        assessment of the quality of television pictures [Internet]},
+    organization={International Telecommunication Union/ITU Radiocommunication Sector [cited 27.04.2021]},
+    edition={Thirteenth edition},
+    year={2012},
+    note={Available from: \url{https://www.itu.int/dms_pubrec/itu-r/rec/bt/R-REC-BT.500-13-201201-I!!PDF-E.pdf}} 
+}
+
+@misc{grayBackground,
+    author={Hoolio},
+    title={Why the Color of Your Survey is So Important [Internet]},
+    howpublished={WYZERR; 13.04.2017 [cited 28.04.2021]},
+    note={Available from: \url{https://medium.com/wisdom-blog/why-the-color-of-your-survey-is-so-important-a5a671e60834}}
+}
