--- a/thesis.tex
+++ b/thesis.tex
@@ -39,10 +39,10 @@
 
 \input{chapters/papers.tex}
 
-\appendix
-\input{appendices/a-projectPlan/projectPlan}
-\input{appendices/b-assignment/assignment}
-\input{appendices/c-agreements/agreements}
-\input{appendices/d-results/results}
+%\appendix
+%\input{appendices/a-projectPlan/projectPlan}
+%\input{appendices/b-assignment/assignment}
+%\input{appendices/c-agreements/agreements}
+%\input{appendices/d-results/results}
 
 \end{document}
