Updates from Overleaf

--- a/notes.tex
+++ b/notes.tex
@@ -21,7 +21,7 @@
  - Structure of the report (1)
  
  2. Specification (4-5)
-    - Choice of development method (2-3) Putte inn i intro?
+    - Choice of development method (2-3) 
         - considered models (1)
     - Risk analysis
     
