--- a/thesis.bib
+++ b/thesis.bib
@@ -182,3 +182,10 @@
     howpublished={WYZERR; 13.04.2017 [cited 28.04.2021]},
     note={Available from: \url{https://medium.com/wisdom-blog/why-the-color-of-your-survey-is-so-important-a5a671e60834}}
 }
+
+@misc{WebVsDesktop,
+    author={Brandon Gaille},
+    title={15 Desktop vs Web Application Pros and Cons [internet]},
+    howpublished={BRANDON GAILLE; 06.03.2019 [cited 29.04.2021]},
+    note={Available from: \url{https://brandongaille.com/15-desktop-vs-web-application-pros-and-cons/}}
+}
