Updates from Overleaf

--- a/notes.tex
+++ b/notes.tex
@@ -78,7 +78,9 @@
     - can the two algorithms be used further? (2)
     - how are the objective similar to the subjective? same quality scores? (2)
   
- 
+ Appendix
+    - Project report
+    
  
  ----
  Mellomrom mellom tekst og citation
