Updates from Overleaf

--- a/notes.tex
+++ b/notes.tex
@@ -79,9 +79,37 @@
     - how are the objective similar to the subjective? same quality scores? (2)
   
  Appendix
-    - Project report
+    - Project plan
     
  
  ----
  Mellomrom mellom tekst og citation
  Parenteser rundt figurnavn eller ikke?
+ 
+ Photoshop: 
+ Compression: Level 1
+ Blur: 5
+ Exposure: +3,00
+ Noise: 30 \%
+ 
+%The three image lineups in Figure \ref{fig:ICAOlineup} showcases typical flaws of facial images that negatively affect the quality. The last image of each lineup is considered to have the best quality. The flaws described varies in severity. The face image quality of the lady with her face covered would be at the bottom of the quality scale. The first two images of the man, would not affect the quality to the same degree and the quality of the first two images of the kid, would affect the quality even less. 
+ 
+ 
+                                       /;    ;\
+                                  __  \\____//
+                                 /{_\_/   `'\____
+                                 \___   (o)  (o  }
+      _____________________________/          :--'
+  ,-,'`@@@@@@@@       @@@@@@         \_    `__\
+ ;:(  @@@@@@@@@        @@@             \___(o'o)
+ :: )  @@@@          @@@@@@        ,'@@(  `===='
+ :: : @@@@@:          @@@@         `@@@:
+ :: \  @@@@@:       @@@@@@@)    (  '@@@'
+ ;; /\      /`,    @@@@@@@@@\   :@@@@@)
+ ::/  )    {_----------------:  :~`,~~;
+;;'`; :   )                  :  / `; ;
+;;;; : :   ;                  :  ;  ; :
+`'`' / :  :                   :  :  : :
+   )_ \__;      ";"          :_ ;  \_\       `,','
+   :__\  \    * `,'*         \  \  :  \   *  8`;'*
+       `^'     \ :/           `^'  `-^-'   \v/ :
