--- a/thesis.bib
+++ b/thesis.bib
@@ -81,6 +81,42 @@
     note={Available from: \url{https://dzone.com/articles/pros-and-cons-of-django-framework-for-app-developm} }
 }
 
+@misc{ReactProsAndCons,
+    title={Pros and Cons of ReactJS},
+    howpublished={JavaTPoint; [cited 22.04.2021]},
+    note={Availible from: \url{https://www.javatpoint.com/pros-and-cons-of-react}}
+}
+
+@misc{NodeJs,
+    title={Node.js},
+    howpublished={Wikipedia; 11.1.2019 [cited 06.05.2021]},
+    note={Availible from: \url{https://no.wikipedia.org/wiki/Node.js}}
+}
+
+@misc{goodBadAngular,
+    title={The good and the Bad of Angular Development},
+    howpublished={altexsoft; 25.03.2020 [cited 06.05.2021]},
+    note={Availible from: \url{https://www.altexsoft.com/blog/engineering/the-good-and-the-bad-of-angular-development/}}
+}
+
+@misc{ReactVSAngular,
+    title={React vs Angular: 10 Most Important Differences You Must Know!},
+    howpublished={guru99; [cited 06.05.2021]},
+    note={Availible from: \url{https://www.guru99.com/react-vs-angular-key-difference.html}}
+}
+
+@misc{AngularCons,
+    title={Understanding the pros and cons of Angular Development},
+    howpublished={greyCampus; 30.05.2019 [cited 06.05.2021]},
+    note={Availible from: \url{https://www.greycampus.com/blog/programming/good-and-bad-of-angular-development}}
+}
+
+@misc{ReactGetStarted,
+    title={Getting Started},
+    howpublished={React; [cited 06.05.2021]},
+    note={Availible from: \url{https://reactjs.org/docs/getting-started.html}}
+}
+
 @misc{Containerization,
     author={Eshan Sarpotdar},
     title={Why Should You Containerize Applications? [Internet]},
@@ -135,7 +171,7 @@
 
 % Authors funker faen ikke
 @misc{VGGFace2,
-    author={Cao Q and Shen L and Xie W and Parkhi OM and Zisserman A},
+    author={Cao, Q. and Shen, L. and Xie. W. and Parkhi, OM. and Zisserman, A.},
     title={VGGFace2: A dataset for recognising faces across pose and age},
     howpublished={Cornell University [cited 27.04.2021]},
     edition={version 2},
@@ -145,7 +181,7 @@
 }
 
 @misc{FaceImageQualityAssessment,
-    author={Schlett T and Rathgeb C and Henniger O and Galbally J and Fierrez J and Busch C},
+    author={Schlett, T. and Rathgeb, C. and Henniger, O. and Galbally, J. and Fierrez, J. and Busch, C.},
     title={Face Image Quality Assessment: A Literature Survey},
     howpublished={Cornell University [cited 27.04.2021]},
     edition={version 1},
@@ -188,4 +224,11 @@
     title={15 Desktop vs Web Application Pros and Cons [internet]},
     howpublished={BRANDON GAILLE; 06.03.2019 [cited 29.04.2021]},
     note={Available from: \url{https://brandongaille.com/15-desktop-vs-web-application-pros-and-cons/}}
+}
+
+@misc{wiki:spearman,
+    author={Wikipedia contributors},
+    title={Spearman's rank correlation coefficient [Internet]},
+    howpublished={Wikipedia;  [cited 28.04.2021]},
+    note={Available from: \url{https://en.wikipedia.org/w/index.php?title=Spearman\%27s_rank_correlation_coefficient&oldid=1019524247}}
 }
