--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,9 @@
 \documentclass[british,titlepage,table,xcdraw]{ntnuthesis}
 
 \title{An NTNU Thesis \LaTeX{} Document Class}
-\shorttitle{An NTNU Thesis Document Class}
-\author{Community of Practice in Computer Science Education at NTNU}
-\shortauthor{CoPCSE$@$NTNU}
+\shorttitle{Face Image Quality}
+\author{Walid Demloj, Hans Petter Fauchald Taralrud, Kjetil Grosberghaugen, Julian Nyland Skattum}
+\shortauthor{ }
 \date{CC-BY \ntnuthesisdate}
 
 \addbibresource{thesis.bib}
