Updates from Overleaf

--- a/thesis.bib
+++ b/thesis.bib
@@ -111,6 +111,12 @@
     note={Availible from: \url{https://www.greycampus.com/blog/programming/good-and-bad-of-angular-development}}
 }
 
+@misc{MaterialUI,
+    title={Album Layout},
+    howpublished={Material-UI; [cited 12.05.2021]},
+    note={Availible from: \url{https://material-ui.com/getting-started/templates/album/}}
+    }
+
 @misc{ReactGetStarted,
     title={Getting Started},
     howpublished={React; [cited 06.05.2021]},
@@ -231,4 +237,32 @@
     title={Spearman's rank correlation coefficient [Internet]},
     howpublished={Wikipedia;  [cited 28.04.2021]},
     note={Available from: \url{https://en.wikipedia.org/w/index.php?title=Spearman\%27s_rank_correlation_coefficient&oldid=1019524247}}
+}
+
+
+@misc{hernandezortega2019faceqnet,
+      title={FaceQnet: Quality Assessment for Face Recognition based on Deep Learning}, 
+      author={Javier Hernandez-Ortega and Javier Galbally and Julian Fierrez and Rudolf Haraksim and Laurent Beslay},
+      year={2019},
+      note={Available from: \url{https://arxiv.org/abs/1904.01740}}
+}
+
+@misc{hernandezortega2021biometric,
+      title={Biometric Quality: Review and Application to Face Recognition with FaceQnet}, 
+      author={Javier Hernandez-Ortega and Javier Galbally and Julian Fierrez and Laurent Beslay},
+      year={2021},
+      note={Available from: \url{https://arxiv.org/abs/2006.03298}}
+}
+
+@misc{colorblindness,
+    title={Colour Blindness [internet]},
+    howpublished={Colour Blind Awareness; [cited 12.05.21]},
+    note={Available from: \url{https://www.colourblindawareness.org/colour-blindness/}}
+}
+
+@phdthesis{Xphdthesis,
+	author={Marius Pedersen},
+	title={Image quality metrics for the evaluation of printing workflows},
+	school={University of Oslo},
+	year= {2011},
 }
