--- a/thesis.tex
+++ b/thesis.tex
@@ -37,12 +37,13 @@
 \chapter*{\bibname}
 \printbibliography[heading=none]
 
-\input{chapters/papers.tex}
 
 %\appendix
 %\input{appendices/a-projectPlan/projectPlan}
 %\input{appendices/b-assignment/assignment}
 %\input{appendices/c-agreements/agreements}
 %\input{appendices/d-results/results}
+%\input{appendices/meeting-reports/0-meetings}
+%\input{appendices/meeting-reports/1-meetings-supervisor}
 
 \end{document}
