--- a/notes.tex
+++ b/notes.tex
@@ -80,17 +80,22 @@
   
  Appendix
     - Project plan
+    - Survey instructions
+    - Meeting reports with supervisor
+    - Meeting reports with Mobai
+    - Results (raw data)
     
  
  ----
+ Alltid skrive "FIQMs"? Kan vi også bruke "metrics"?
+ Python with p or P?
  Mellomrom mellom tekst og citation
  Parenteser rundt figurnavn eller ikke?
  
  Photoshop: 
  Compression: Level 1
- Blur: 5
- Exposure: +3,00
- Noise: 30 \%
+ Blur: 2
+ Noise: 7 \%
  
 %The three image lineups in Figure \ref{fig:ICAOlineup} showcases typical flaws of facial images that negatively affect the quality. The last image of each lineup is considered to have the best quality. The flaws described varies in severity. The face image quality of the lady with her face covered would be at the bottom of the quality scale. The first two images of the man, would not affect the quality to the same degree and the quality of the first two images of the kid, would affect the quality even less. 
  
@@ -113,3 +118,5 @@
    )_ \__;      ";"          :_ ;  \_\       `,','
    :__\  \    * `,'*         \  \  :  \   *  8`;'*
        `^'     \ :/           `^'  `-^-'   \v/ :
+       
+Julian er kuuuul
